force-app/main/default/objects/Opportunity/fields/Current_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Date__c</fullName>
    <label>Current Date</label>
    <type>Date</type>
</CustomField>