force-app/main/default/objects/Opportunity/fields/Opportunity_to_Proceed__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_to_Proceed__c</fullName>
    <label>Opportunity to Proceed</label>
    <length>10</length>
    <type>Text</type>
</CustomField>