force-app/main/default/objects/Opportunity/validationRules/Check_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Rating</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(TEXT(Account.Rating)),ISPICKVAL(StageName, &apos;CLOSED WON&apos;))</errorConditionFormula>
    <errorMessage>Rating is blank</errorMessage>
</ValidationRule>